infra/azure/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.43.8.12551",
      "templateHash": "118334802648582356"
    }
  },
  "parameters": {
    "projectPrefix": {
      "type": "string",
      "defaultValue": "qlvmb-prod",
      "minLength": 3,
      "metadata": {
        "description": "Tiền tố dùng chung để tạo tên tài nguyên."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Khu vực triển khai Azure."
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Tên đăng nhập quản trị của máy ảo Linux."
      }
    },
    "adminSshPublicKey": {
      "type": "securestring",
      "metadata": {
        "description": "Khóa SSH công khai cho máy ảo Azure."
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_B2s",
      "metadata": {
        "description": "Kích thước máy ảo chạy Coolify."
      }
    },
    "postgresqlSku": {
      "type": "string",
      "defaultValue": "Standard_B1ms",
      "metadata": {
        "description": "SKU máy chủ PostgreSQL Flexible Server."
      }
    },
    "postgresqlTier": {
      "type": "string",
      "defaultValue": "Burstable",
      "allowedValues": [
        "Burstable",
        "GeneralPurpose",
        "MemoryOptimized"
      ],
      "metadata": {
        "description": "Phân tầng hiệu năng cho PostgreSQL Flexible Server."
      }
    },
    "postgresqlVersion": {
      "type": "string",
      "defaultValue": "16",
      "allowedValues": [
        "15",
        "16"
      ],
      "metadata": {
        "description": "Phiên bản PostgreSQL."
      }
    },
    "postgresqlAdminUsername": {
      "type": "string",
      "minLength": 3,
      "metadata": {
        "description": "Tên đăng nhập quản trị PostgreSQL."
      }
    },
    "postgresqlAdminPassword": {
      "type": "securestring",
      "minLength": 12,
      "metadata": {
        "description": "Mật khẩu quản trị PostgreSQL."
      }
    },
    "databaseName": {
      "type": "string",
      "defaultValue": "airticket",
      "metadata": {
        "description": "Tên cơ sở dữ liệu ứng dụng."
      }
    },
    "virtualNetworkAddressPrefix": {
      "type": "string",
      "defaultValue": "10.30.0.0/16",
      "metadata": {
        "description": "CIDR mạng nội bộ cho máy ảo ứng dụng."
      }
    },
    "applicationSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.30.1.0/24",
      "metadata": {
        "description": "CIDR subnet chạy Coolify."
      }
    }
  },
  "variables": {
    "$fxv#0": "I2Nsb3VkLWNvbmZpZwpwYWNrYWdlX3VwZGF0ZTogdHJ1ZQpwYWNrYWdlX3VwZ3JhZGU6IHRydWUKcGFja2FnZXM6CiAgLSBjdXJsCiAgLSB3Z2V0CiAgLSBnaXQKICAtIGpxCiAgLSBjYS1jZXJ0aWZpY2F0ZXMKCnJ1bmNtZDoKICAtIHRpbWVkYXRlY3RsIHNldC10aW1lem9uZSBBc2lhL0hvX0NoaV9NaW5oCiAgLSBjdXJsIC1mc1NMIGh0dHBzOi8vY2RuLmNvb2xsYWJzLmlvL2Nvb2xpZnkvaW5zdGFsbC5zaCB8IGJhc2gK",
    "publicIpName": "[format('{0}-pip', parameters('projectPrefix'))]",
    "networkSecurityGroupName": "[format('{0}-nsg', parameters('projectPrefix'))]",
    "virtualNetworkName": "[format('{0}-vnet', parameters('projectPrefix'))]",
    "networkInterfaceName": "[format('{0}-nic', parameters('projectPrefix'))]",
    "vmName": "[format('{0}-vm', parameters('projectPrefix'))]",
    "postgresqlServerName": "[take(replace(format('{0}-pgsql', parameters('projectPrefix')), '_', '-'), 63)]",
    "postgresqlFirewallRuleName": "allow-coolify-vm",
    "sshPublicKeyPath": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-05-01",
      "name": "[variables('publicIpName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4",
        "dnsSettings": {
          "domainNameLabel": "[toLower(format('{0}-{1}', parameters('projectPrefix'), uniqueString(resourceGroup().id)))]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-05-01",
      "name": "[variables('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow-ssh",
            "properties": {
              "access": "Allow",
              "direction": "Inbound",
              "priority": 100,
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "22"
            }
          },
          {
            "name": "allow-http",
            "properties": {
              "access": "Allow",
              "direction": "Inbound",
              "priority": 110,
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "allow-https",
            "properties": {
              "access": "Allow",
              "direction": "Inbound",
              "priority": 120,
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "allow-coolify-bootstrap",
            "properties": {
              "access": "Allow",
              "direction": "Inbound",
              "priority": 130,
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "8000"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2024-05-01",
      "name": "[variables('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('virtualNetworkAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "application",
            "properties": {
              "addressPrefix": "[parameters('applicationSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-05-01",
      "name": "[variables('networkInterfaceName')]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "primary",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName'))]"
              },
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName')), '2024-05-01').subnets[0].id]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-07-01",
      "name": "[variables('vmName')]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('vmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "customData": "[variables('$fxv#0')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "keyData": "[parameters('adminSshPublicKey')]",
                  "path": "[variables('sshPublicKeyPath')]"
                }
              ]
            }
          }
        },
        "storageProfile": {
          "imageReference": {
            "offer": "0001-com-ubuntu-server-jammy",
            "publisher": "Canonical",
            "sku": "22_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]",
              "properties": {
                "primary": true
              }
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
      ]
    },
    {
      "type": "Microsoft.DBforPostgreSQL/flexibleServers",
      "apiVersion": "2024-08-01",
      "name": "[variables('postgresqlServerName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('postgresqlSku')]",
        "tier": "[parameters('postgresqlTier')]"
      },
      "properties": {
        "administratorLogin": "[parameters('postgresqlAdminUsername')]",
        "administratorLoginPassword": "[parameters('postgresqlAdminPassword')]",
        "availabilityZone": "1",
        "backup": {
          "backupRetentionDays": 7,
          "geoRedundantBackup": "Disabled"
        },
        "createMode": "Create",
        "highAvailability": {
          "mode": "Disabled"
        },
        "network": {
          "publicNetworkAccess": "Enabled"
        },
        "storage": {
          "storageSizeGB": 32
        },
        "version": "[parameters('postgresqlVersion')]"
      }
    },
    {
      "type": "Microsoft.DBforPostgreSQL/flexibleServers/databases",
      "apiVersion": "2024-08-01",
      "name": "[format('{0}/{1}', variables('postgresqlServerName'), parameters('databaseName'))]",
      "properties": {
        "charset": "UTF8",
        "collation": "en_US.utf8"
      },
      "dependsOn": [
        "[resourceId('Microsoft.DBforPostgreSQL/flexibleServers', variables('postgresqlServerName'))]"
      ]
    },
    {
      "type": "Microsoft.DBforPostgreSQL/flexibleServers/firewallRules",
      "apiVersion": "2024-08-01",
      "name": "[format('{0}/{1}', variables('postgresqlServerName'), variables('postgresqlFirewallRuleName'))]",
      "properties": {
        "startIpAddress": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName')), '2024-05-01').ipAddress]",
        "endIpAddress": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName')), '2024-05-01').ipAddress]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.DBforPostgreSQL/flexibleServers', variables('postgresqlServerName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName'))]"
      ]
    }
  ],
  "outputs": {
    "coolifyBootstrapUrl": {
      "type": "string",
      "value": "[format('http://{0}:8000', reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName')), '2024-05-01').ipAddress)]"
    },
    "vmPublicIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName')), '2024-05-01').ipAddress]"
    },
    "vmSshCommand": {
      "type": "string",
      "value": "[format('ssh {0}@{1}', parameters('adminUsername'), reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName')), '2024-05-01').ipAddress)]"
    },
    "postgresqlHost": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.DBforPostgreSQL/flexibleServers', variables('postgresqlServerName')), '2024-08-01').fullyQualifiedDomainName]"
    },
    "postgresqlDatabaseName": {
      "type": "string",
      "value": "[parameters('databaseName')]"
    }
  }
}
